<resources>
    <string name="app_name">Metrum</string>
    <string name="label_start">Start</string>
    <string name="label_default_frequency">120</string>
    <string name="label_andante">Andante</string>
    <string name="allegro">Allegro</string>
    <string name="label_free">Free</string>
    <string name="label_ok">OK</string>
    <string name="label_default_tempo">Andante</string>
    <string name="label_version">Version</string>
    <string name="label_hint_click_down">Tap 3x to set frequency…</string>
    <string name="label_hint_turn_wheel">Turn the wheel to adjust frequency…</string>
    <string name="label_hint_swipe"><![CDATA[<]]>\u0020\u0020\u0020\u0020\u0020\u0020\u0020<![CDATA[>]]></string>
    <string name="label_hint_define_beats">Click on items to define beats</string>
    <string name="label_empty" />
    <string name="label_stho">STHO</string>
    <string name="label_hint_storage">Open metrum or save changes</string>
    <string name="link_salsa">Salsa</string>
    <string name="link_slowfox">Slowfox</string>
    <string name="link_chacha">ChaCha</string>
    <string name="link_waltz">Waltz</string>
    <string name="link_metrum">Metrum</string>
    <string name="label_set_one">Set 1</string>
    <string name="label_set_two">Set 2</string>
    <string name="label_set_three">Set 3</string>
    <string name="label_set_four">Set 4</string>
    <string name="pref_tempo_track_shortcuts">TempoTrack Shortcuts</string>
    <string name="pref_beat_track_shortcuts">BeatTrack Shortcuts</string>
    <string name="pref_visualization">Visualization</string>
    <string name="pref_background_color">Background Color</string>
    <string name="pref_design">Design Settings</string>
    <string name="pref_track">Track Settings</string>
    <string name="spaceholder">spaceholder</string>
    <string name="first_set">Set 1</string>
    <string name="second_set">Set 2</string>
    <string name="third_set">Set 3</string>
    <string name="bonus_set">Bonus</string>
    <string name="default_text">Default</string>
</resources>
