<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/live_mode_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.0"
    android:background="@android:color/transparent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:textSize="50sp"
        android:text="@string/first_set"
        android:background="@color/colorSetOne"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:id="@+id/first_set_view"
        />

    <TextView
        android:id="@+id/second_set_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:textSize="50sp"
        android:textAlignment="center"
        android:text="@string/second_set"
        android:background="@color/colorSetTwo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/third_set_view"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:textAlignment="center"
        android:textSize="50sp"
        android:text="@string/third_set"
        android:background="@color/colorSetThree"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/bonus_set_view"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:layout_weight="0.2"
        android:textSize="50sp"
        android:text="@string/bonus_set"
        android:background="@color/colorSetBonus"
        android:layout_gravity="center_horizontal"
        />



</android.widget.LinearLayout>