<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.0"
    android:id="@+id/gig_mode_fragment_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/set_one_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"
                android:layout_marginStart="5sp"
                android:layout_weight="0.25"
                android:text="@string/first_set"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="casual" />

            <TextView
                android:id="@+id/set_two_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2sp"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:layout_marginStart="2sp"
                android:layout_weight="0.25"
                android:text="@string/second_set"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="casual" />


            <TextView
                android:id="@+id/set_three_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2sp"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:layout_marginStart="2sp"
                android:layout_weight="0.25"
                android:text="@string/third_set"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="casual" />


            <TextView
                android:id="@+id/set_bonus_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5sp"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="5sp"
                android:layout_marginStart="2sp"
                android:layout_weight="0.25"
                android:text="@string/bonus_set"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="casual" />

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/tempo_track_set_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="?android:attr/activatedBackgroundIndicator">
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <ImageButton
            android:id="@+id/gig_mode_start_stop_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            app:srcCompat="@android:drawable/ic_media_play" />
    </RelativeLayout>

</android.widget.LinearLayout>